oxiplate-derive/tests/broken/unwritable-writ.stderr
error[E0277]: the trait bound `Vec<&str>: ToString` is not satisfied
 --> tests/broken/unwritable-writ.rs:4:23
  |
4 | #[oxiplate_inline("{{ messages }} {{ raw: messages }}\n")]
  |                       ^^^^^^^^ the trait `std::fmt::Display` is not implemented for `Vec<&str>`
  |
  = note: required for `Vec<&str>` to implement `ToString`

error[E0277]: the trait bound `Vec<&str>: ToString` is not satisfied
 --> tests/broken/unwritable-writ.rs:4:43
  |
4 | #[oxiplate_inline("{{ messages }} {{ raw: messages }}\n")]
  |                                           ^^^^^^^^ the trait `std::fmt::Display` is not implemented for `Vec<&str>`
  |
  = note: required for `Vec<&str>` to implement `ToString`
